# kwin-portal-bridge

./: BUG-AUDIT.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: capture.rs  cli.rs  daemon.rs  desktop_apps.rs  executor.rs  json.rs  kwin.rs  main.rs  mcp.rs  model.rs  portal.rs  session_overlay.rs  teach_overlay.rs  token_store.rs  util.rs
