[package]
name = "kwin-portal-bridge"
version = "0.2.3"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ashpd = "0.13.11"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive", "std", "help", "suggestions"], default-features = false }
dbus = { version = "0.9.11", features = ["vendored"], default-features = false }
freedesktop-desktop-entry = { version = "0.8.1", default-features = false }
freedesktop-icons = { version = "0.4.0", default-features = false }
iced = { version = "0.14.0", features = ["canvas", "tokio", "wayland", "web-colors", "wgpu"], default-features = false }
iced_layershell = { version = "0.18.1", default-features = false }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
lamco-portal = { version = "0.4.0", default-features = false}
lamco-pipewire = { version = "0.4.2", default-features = false}
libc = { version = "0.2.186", default-features = false, features = ["std"]}
serde = { version = "1.0.228" , default-features = false}
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
schemars = { version = "1.2.1", default-features = false, optional = true }
tempfile = { version = "3.27.0", default-features = false}
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] , default-features = false}
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] , default-features = false}
wl-clipboard-rs = { version = "0.9.3", default-features = false}
rmcp = { version = "1.7.0", features = ["schemars", "transport-io", "server", "macros"] , default-features = false, optional = true }

[features]
default = []
mcp = ["dep:rmcp", "dep:schemars"]

[profile.release]
strip = true
lto = "thin"
codegen-units = 8
opt-level = 3